--- a/style.css
+++ b/style.css
@@ -115,3 +115,7 @@ body {
   background-position: center;
   filter: drop-shadow(0px 10px 10px rgba(0, 0, 0, 0.25));
 }
+
+.linked:hover {
+  opacity: .5;
+}
